@@ -11,7 +11,6 @@
 #include <types.h>
 #include <asm/asm.h>
 #include <console/drivers/drivers.h>
-#include <debug_error/debug_error.h>
 #include <keyboard/keyboard.h>
 
 #define P(row, col)	((row << 5) + col)
